# Initiative

./: README.md  com.DrGumby.Initiative.json  meson.build
data/: com.DrGumby.Initiative.appdata.xml.in  com.DrGumby.Initiative.desktop  com.DrGumby.Initiative.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: add_character_dialog.ui  add_character_dialog.vala  application.vala  character_line.ui  character_line.vala  character_list.ui  character_list.vala  initiative.gresource.xml  main.vala  meson.build  window.ui  window.vala
